# end-to-end-medical-chatbot

./: .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml  setup.py  store_index.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: trial.ipynb
reports/: README.md
src/: helper.py  prompt.py
static/: style.css
templates/: chat.html
