[project]
name = "end-to-end-medical-chatbot"
version = "0.1.0"
description = "GenAI chatbot for medical Q&A"
authors = [
    {name = "Boyang Wan",email = "boyangwan12@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "sentence-transformers (==2.2.2)",
    "langchain (>=0.3.25,<0.4.0)",
    "flask (>=3.1.1,<4.0.0)",
    "pypdf (>=5.5.0,<6.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain-pinecone (>=0.2.6,<0.3.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "langchain-openai (>=0.3.18,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
